# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml
gendiff/: __init__.py
gendiff/differences/: gendiff.py  tools.py
gendiff/differences/formatters/: json_type.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_deep.py  test_flat.py  test_flat_json.py  test_json.py  test_plain.py
tests/fixtures/: correct_answer_json_type.txt
